# multiboot-rust-kernel

./: Cargo.toml  Makefile  Xargo.toml
libs/bump_allocator/: Cargo.toml
libs/bump_allocator/src/: lib.rs
libs/hole_list_allocator/: Cargo.toml
libs/hole_list_allocator/src/: lib.rs
rust-os-gdb/include/: bfd.h
rust-os-gdb/lib/: libbfd.la  libopcodes.la
rust-os-gdb/share/info/: bfd.info  gdb.info
rust-os-gdb/share/man/man1/: gcore.1  gdb.1  gdbserver.1
rust-os-gdb/share/man/man5/: gdbinit.5
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm  multiboot_header.asm
src/interrupts/: gdt.rs  idt.rs  mod.rs
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
