[package]
authors = ["kjaleshire@gmail.com"]
name = "blog_os"
version = "0.0.1"

[dependencies]
bit_field = "0.1.0"
bitflags = "0.7.0"
once = "0.3.2"
rlibc = "0.1.4"
spin = "0.3.4"

[dependencies.hole_list_allocator]
path = "libs/hole_list_allocator"

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"

[dependencies.x86]
default-features = false
version = "0.7.0"

[lib]
crate-type = ["staticlib"]

[profile]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
